# qa-agents

./: .gitignore  README.md  auth_state.json  input.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  save-auth.js  save-auth.ts
excercises/: 1_excercise.ipynb  2_excercise.ipynb  3_excercise.ipynb  4_excercise.ipynb  test.ipynb
zcopies/: main.py
zcopies/src/agents/: advanced_test_healer.py  snapshot_collector.py  test_case_designer.py  test_healer.py  test_planner.py  test_runner.py  test_script_generator.py
zcopies/src/graph/: state.py  workflow.py
zcopies/src/prompts/: snapshot_collector.txt  test_case_designer.txt  test_healer.txt  test_healer_advanced.txt  test_planner.txt  test_runner.txt  test_script_generator.txt
zcopies/src/tools/: file_tools.py  playwright_tools.py  snapshot_locator_tool.py
